Sobre atualizado e mapa

--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -7,29 +7,44 @@
     <link rel="stylesheet" href="../css/sobre.css" />
   </head>
   <body>
-    <div class="circulo">
-      <div class="text">
-        <h1 id="Titulo">SOBRE O PROJETO</h1>
-        <p id="Descricao">
-          A CampuStore é uma empresa do setor varejista voltada para estudantes
-          do Ensino Superior. Em seu site, o menu inicial oferece acesso
-          organizado por categorias de produtos, como notebooks, livros e outros
-          itens. Há também seções exclusivas para promoções e pesquisa de
-          produtos. O projeto conta com um carrinho de compras totalmente
-          funcional e um formulário para cadastro de contas de usuários,
-          proporcionando uma experiência completa e prática para o cliente.
-        </p>
-        <p>Entre em contato: 31 6664-9944</p>
+    <div class="container">
+      <div class="circulo">
+        <div class="text">
+          <h1 id="Titulo">SOBRE O PROJETO</h1>
+          <p id="Descricao">
+            A CampuStore é uma empresa do setor varejista voltada para
+            estudantes do Ensino Superior. Em seu site, o menu inicial oferece
+            acesso organizado por categorias de produtos, como notebooks, livros
+            e outros itens. Há também seções exclusivas para promoções e
+            pesquisa de produtos. O projeto conta com um carrinho de compras
+            totalmente funcional e um formulário para cadastro de contas de
+            usuários, proporcionando uma experiência completa e prática para o
+            cliente.
+          </p>
+          <p>Entre em contato: 31 6664-9944</p>
+        </div>
       </div>
-    </div>
 
-    <div class="Membros">
-      <h2>Membros do Grupo:</h2>
-      <div class="membros-grid">
-        <div class="membro">Ian Lucca</div>
-        <div class="membro">Hugo Luiz</div>
-        <div class="membro">Davi Santos</div>
-        <div class="membro">Thales Grossi</div>
+      <div class="Membros">
+        <h2>Membros do Grupo:</h2>
+        <div class="membros-grid">
+          <div class="membro">
+            Ian Lucca
+            <p>Função: Tech Lead</p>
+          </div>
+          <div class="membro">
+            Hugo Luiz
+            <p>Função: Dev Front-End</p>
+          </div>
+          <div class="membro">
+            Davi Santos
+            <p>Função: Dev Front-End</p>
+          </div>
+          <div class="membro">
+            Thales Grossi
+            <p>Função: Dev Front-End</p>
+          </div>
+        </div>
       </div>
     </div>
   </body>
