Mapa e Index.html

--- a/index.html
+++ b/index.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/index.css">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>CampuStore</title>
+  <link rel="stylesheet" href="./css/style.css"/>  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
 <body>
-    
-</body>
+  <div class="container">
+    <div id="dvd-logo"></div>
+
+    <div class="header">				
+      	<h1>CampuStore</h1>
+      	<button class="entrar-btn">Entrar</button>
+    </div>
+
+    <div class="menu">
+      <div class="item">
+        <div class="icon"><i class="fas fa-home"></i></div>
+        <span>Início</span>
+      </div>
+      <div class="item">
+        <div class="icon"><i class="fas fa-percent"></i></div>
+        <span>Promoções</span>
+      </div>
+      <div class="item">
+        <div class="icon"><i class="fas fa-boxes"></i></div>
+        <span>Produtos</span>
+      </div>
+      <a href="./pages/sobre.html">
+        <div class="item">
+        <div class="icon"><i class="fas fa-users"></i></div>
+        <span>Sobre o Site</span>
+      </div>
+      </a>
+    </div>
+  </div>
+</body>  
+<script src="index.js"></script>
 </html>
