--- a/pages/mapa.html
+++ b/pages/mapa.html
@@ -4,11 +4,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/mapa.css" />
+    <link rel="stylesheet" href="../css/headertest.css" />
     <title>Document</title>
   </head>
   <body>
+    <header>
+      <div>
+        <div id="divA">
+          <img src="" alt="asd" id="logoImage" srcset="" />
+
+          <a href="">PRODUTOS</a>
+          <a href="">PROMOÇÃO</a>
+          <a href="">ENDEREÇO</a>
+          <a href="">SOBRE</a>
+
+          <input id="searchBar" type="text" placeholder="Pesquisar..." />
+        </div>
+
+        <div>
+          <figure>
+            <img src="" alt="" />
+          </figure>
+        </div>
+
+        <div>
+          <figure>
+            <img src="" alt="" />
+          </figure>
+        </div>
+      </div>
+    </header>
+
     <div class="container">
-      
       <div class="circle">
         <h1>MAPA</h1>
         <div>
