header update, headertest.css, mapa.css and mapa.html updated

--- a/pages/mapa.html
+++ b/pages/mapa.html
@@ -1,57 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/mapa.css" />
-    <link rel="stylesheet" href="../css/headertest.css" />
-    <title>Document</title>
-  </head>
-  <body>
-    <header>
-      <div>
-        <div id="divA">
-          <img src="" alt="asd" id="logoImage" srcset="" />
 
-          <a href="">PRODUTOS</a>
-          <a href="">PROMOÇÃO</a>
-          <a href="">ENDEREÇO</a>
-          <a href="">SOBRE</a>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="../css/mapa.css" />
+  <link rel="stylesheet" href="../css/headertest.css" />
+  <title>Document</title>
+</head>
 
-          <input id="searchBar" type="text" placeholder="Pesquisar..." />
-        </div>
+<body>
+  <header>
+    <div id="containerHeader">
 
-        <div>
-          <figure>
-            <img src="" alt="" />
-          </figure>
-        </div>
+      <a href="../index.html">
+        <img src="https://cdn.iconscout.com/icon/free/png-256/free-imagem-quadrado-3604303-3004161.png?f=webp" alt=""
+          class="logoImages" srcset="" />
+      </a>
 
-        <div>
-          <figure>
-            <img src="" alt="" />
-          </figure>
-        </div>
+      <div id="navContent">
+        <a href="">PRODUTOS</a>
+        <a href="">PROMOÇÃO</a>
+        <a href="./mapa.html">ENDEREÇO</a>
+        <a href="./sobre.html">SOBRE</a>
+        <input id="searchBar" type="text" placeholder="Pesquisar..." />
       </div>
-    </header>
 
-    <div class="container">
-      <div class="circle">
-        <h1>MAPA</h1>
-        <div>
-          <p>Onde nos Encontrar!</p>
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3750.5069544017683!2d-43.92591922477249!3d-19.945171431446795!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xa699c00e2b4f6d%3A0x151e458ff7e7fbab!2sUniversidade%20FUMEC!5e0!3m2!1spt-BR!2sbr!4v1748199769584!5m2!1spt-BR!2sbr"
-            width="602"
-            height="309 "
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-            id="map"
-          ></iframe>
-        </div>
+      <div id="figures">
+        <figure>
+          <img src="https://cdn-icons-png.freepik.com/256/6644/6644782.png?semt=ais_incoming" class="logoImages"
+            alt="" />
+        </figure>
+        <!-- Shift + Alt + F -->
+        <figure>
+          <img
+            src="https://images.vexels.com/media/users/3/137047/isolated/lists/5831a17a290077c646a48c4db78a81bb-user-profile-blue-icon.png"
+            class="logoImages" alt="" />
+        </figure>
       </div>
     </div>
-  </body>
+  </header>
+
+  <div class="container">
+    <div class="circle">
+      <h1>MAPA</h1>
+      <div>
+        <p>Onde nos Encontrar!</p>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3750.5069544017683!2d-43.92591922477249!3d-19.945171431446795!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xa699c00e2b4f6d%3A0x151e458ff7e7fbab!2sUniversidade%20FUMEC!5e0!3m2!1spt-BR!2sbr!4v1748199769584!5m2!1spt-BR!2sbr"
+          width="602" height="309 " style="border: 0" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade" id="map"></iframe>
+      </div>
+    </div>
+  </div>
+</body>
+
 </html>
