sobre and mapa html and css updated

--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -1,51 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="../css/sobre.css" />
-  </head>
-  <body>
-    <div class="container">
-      <div class="circulo">
-        <div class="text">
-          <h1 id="Titulo">SOBRE O PROJETO</h1>
-          <p id="Descricao">
-            A CampuStore é uma empresa do setor varejista voltada para
-            estudantes do Ensino Superior. Em seu site, o menu inicial oferece
-            acesso organizado por categorias de produtos, como notebooks, livros
-            e outros itens. Há também seções exclusivas para promoções e
-            pesquisa de produtos. O projeto conta com um carrinho de compras
-            totalmente funcional e um formulário para cadastro de contas de
-            usuários, proporcionando uma experiência completa e prática para o
-            cliente.
-          </p>
-          <p>Entre em contato: 31 6664-9944</p>
-        </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="../css/sobre.css" />
+  <link rel="stylesheet" href="../css/headertest.css">
+</head>
+<body>
+  <header>
+    <div id="containerHeader">
+
+      <a href="../index.html">
+        <img src="https://cdn.iconscout.com/icon/free/png-256/free-imagem-quadrado-3604303-3004161.png?f=webp" alt=""
+          class="logoImages" srcset="" />
+      </a>
+
+      <div id="navContent">
+        <a href="">PRODUTOS</a>
+        <a href="">PROMOÇÃO</a>
+        <a href="./mapa.html">ENDEREÇO</a>
+        <a href="./sobre.html">SOBRE</a>
+        <input id="searchBar" type="text" placeholder="Pesquisar..." />
       </div>
 
-      <div class="Membros">
-        <h2>Membros do Grupo:</h2>
-        <div class="membros-grid">
-          <div class="membro">
-            Ian Lucca
-            <p>Função: Tech Lead</p>
-          </div>
-          <div class="membro">
-            Hugo Luiz
-            <p>Função: Dev Front-End</p>
-          </div>
-          <div class="membro">
-            Davi Santos
-            <p>Função: Dev Front-End</p>
-          </div>
-          <div class="membro">
-            Thales Grossi
-            <p>Função: Dev Front-End</p>
-          </div>
+      <div id="figures">
+        <figure>
+          <img src="https://cdn-icons-png.freepik.com/256/6644/6644782.png?semt=ais_incoming" class="logoImages"
+            alt="" />
+        </figure>
+        <!-- Shift + Alt + F -->
+        <figure>
+          <img
+            src="https://images.vexels.com/media/users/3/137047/isolated/lists/5831a17a290077c646a48c4db78a81bb-user-profile-blue-icon.png"
+            class="logoImages" alt="" />
+        </figure>
+      </div>
+    </div>
+  </header>
+
+  <div class="container">
+    <div class="circulo">
+      <div class="text">
+        <h1 id="Titulo">SOBRE O PROJETO</h1>
+        <p id="Descricao">
+          A CampuStore é uma empresa do setor varejista voltada para
+          estudantes do Ensino Superior. Em seu site, o menu inicial oferece
+          acesso organizado por categorias de produtos, como notebooks, livros
+          e outros itens. Há também seções exclusivas para promoções e
+          pesquisa de produtos. O projeto conta com um carrinho de compras
+          totalmente funcional e um formulário para cadastro de contas de
+          usuários, proporcionando uma experiência completa e prática para o
+          cliente.
+        </p>
+        <br>
+        <p>Entre em contato: 31 6664-9944</p>
+      </div>
+    </div>
+
+    <div class="Membros">
+      <h2>Membros do Grupo:</h2>
+      <div class="membros-grid">
+        <div class="membro">
+          Ian Lucca
+          <p>Função: Tech Lead</p>
+        </div>
+        <div class="membro">
+          Hugo Luiz
+          <p>Função: Dev Front-End</p>
+        </div>
+        <div class="membro">
+          Davi Santos
+          <p>Função: Dev Front-End</p>
+        </div>
+        <div class="membro">
+          Thales Grossi
+          <p>Função: Dev Front-End</p>
         </div>
       </div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
