--- a/pages/mapa.html
+++ b/pages/mapa.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="../css/headertest.css" />
   <title>Document</title>
 </head>
-
 <body>
   <header>
     <div id="containerHeader">
@@ -42,10 +41,15 @@
   </header>
 
   <div class="container">
+
+    <br>
+    
     <div class="circle">
-      <h1>MAPA</h1>
+      <h1><b>MAPA</b></h1>
+      <br>
       <div>
         <p>Onde nos Encontrar!</p>
+        <br>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3750.5069544017683!2d-43.92591922477249!3d-19.945171431446795!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xa699c00e2b4f6d%3A0x151e458ff7e7fbab!2sUniversidade%20FUMEC!5e0!3m2!1spt-BR!2sbr!4v1748199769584!5m2!1spt-BR!2sbr"
           width="602" height="309 " style="border: 0" allowfullscreen="" loading="lazy"
