new design update, cadastro.html page created

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="header">				
       	<h1>CampuStore</h1>
-      	<button class="entrar-btn">Entrar</button>
+      	<a href="./pages/cadastro.html" style="text-decoration: none;"><button class="entrar-btn">Entrar</button></a>
     </div>
 
     <div class="menu">
