--- a/pages/gradeProdutos.html
+++ b/pages/gradeProdutos.html
@@ -10,109 +10,115 @@
 </head>
 
 <body>
-    <header>
+  <header>
     <div id="containerHeader">
-
       <a href="../index.html">
         <img src="https://cdn.iconscout.com/icon/free/png-256/free-imagem-quadrado-3604303-3004161.png?f=webp" alt=""
-          class="logoImages" srcset="" />
+          class="logoImages" />
       </a>
+
+      <div id="menu-toggle" aria-label="Menu" aria-expanded="false" role="button" tabindex="0">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
 
       <div id="navContent">
         <a href="">PRODUTOS</a>
         <a href="">PROMOÇÃO</a>
         <a href="./mapa.html">ENDEREÇO</a>
         <a href="./sobre.html">SOBRE</a>
-        <input id="searchBar" type="text" placeholder="Pesquisar..." />
       </div>
+
+      <input id="searchBar" type="text" placeholder="Pesquisar..." />
 
       <div id="figures">
         <figure>
-          <img src="https://cdn-icons-png.freepik.com/256/6644/6644782.png?semt=ais_incoming" class="logoImages"
-            alt="" />
+          <img src="../images/carrinhoIMG.png" class="logoImages" />
         </figure>
-        <!-- Shift + Alt + F -->
         <figure>
-          <img
-            src="https://images.vexels.com/media/users/3/137047/isolated/lists/5831a17a290077c646a48c4db78a81bb-user-profile-blue-icon.png"
-            class="logoImages" alt="" />
+          <a href="./cadastro.html">
+            <img
+              src="../images/profileIMG.png"
+              class="logoImages" />
+          </a>
         </figure>
       </div>
     </div>
   </header>
 
     <div class="grid">
-            <div class="produto">
-                <img class="img-produto" src="../images/caderno_1.jpg" alt="Imagem Não Encontrada">
-                <a class="nome-produto" href="">Caderno 160 folhas</a>
-                <p class="preco">R$27,90</p>
-            </div>
+        <div class="produto">
+            <img class="img-produto" src="../images/caderno_1.jpg" alt="Imagem Não Encontrada">
+            <a class="nome-produto" href="">Caderno 160 folhas</a>
+            <p class="preco">R$27,90</p>
+        </div>
 
-            <div class="produto">
-                <img class="img-produto" src="../images/caderno_2.jpg" alt="Imagem Não Encontrada">
-                <a class="nome-produto" href="">Caderno 200 folhas</a>
-                <p class="preco">R$32,00</p>
-            </div>
+        <div class="produto">
+            <img class="img-produto" src="../images/caderno_2.jpg" alt="Imagem Não Encontrada">
+            <a class="nome-produto" href="">Caderno 200 folhas</a>
+            <p class="preco">R$32,00</p>
+        </div>
 
-            <div class="produto">
-                <img class="img-produto" src="../images/notebook_lenovo_ideapad.jpg" alt="Imagem Não Encontrada">
-                <a class="nome-produto" href="">Notebook Lenovo</a>
-                <p class="preco">R$2.390,00</p>
-            </div>
+        <div class="produto">
+            <img class="img-produto" src="../images/notebook_lenovo_ideapad.jpg" alt="Imagem Não Encontrada">
+            <a class="nome-produto" href="">Notebook Lenovo</a>
+            <p class="preco">R$2.390,00</p>
+        </div>
 
-            <div class="produto">
-                <img class="img-produto" src="../images/caderno_3.jpg" alt="Imagem Não Encontrada">
-                <a class="nome-produto" href="">Caderno 200 folhas</a>
-                <p class="preco">R$34,00</p>
-            </div>
+        <div class="produto">
+            <img class="img-produto" src="../images/caderno_3.jpg" alt="Imagem Não Encontrada">
+            <a class="nome-produto" href="">Caderno 200 folhas</a>
+            <p class="preco">R$34,00</p>
+        </div>
 
-            <div class="produto">
-                <img class="img-produto" src="../images/fone_jbl.jpg" alt="Imagem Não Encontrada">
-                <a class="nome-produto" href="">Fone de Ouvido JBL</a>
-                <p class="preco">R$ 249,00</p>
-            </div>
+        <div class="produto">
+            <img class="img-produto" src="../images/fone_jbl.jpg" alt="Imagem Não Encontrada">
+            <a class="nome-produto" href="">Fone de Ouvido JBL</a>
+            <p class="preco">R$ 249,00</p>
+        </div>
 
-            <div class="produto">
-                <img class="img-produto" src="../images/notebook_samsung.jpg" alt="Imagem Não Encontrada">
-                <a class="nome-produto" href="">Notebook Samsung</a>
-                <p class="preco">R$ 3013,49</p>
-            </div>
+        <div class="produto">
+            <img class="img-produto" src="../images/notebook_samsung.jpg" alt="Imagem Não Encontrada">
+            <a class="nome-produto" href="">Notebook Samsung</a>
+            <p class="preco">R$ 3013,49</p>
+        </div>
 
-            <div class="produto">
-                <img class="img-produto" src="../images/notebook_acer.jpg" alt="Imagem Não Encontrada">
-                <a class="nome-produto" href="">Notebook Acer</a>
-                <p class="preco">R$ 3029,10</p>
-            </div>
+        <div class="produto">
+            <img class="img-produto" src="../images/notebook_acer.jpg" alt="Imagem Não Encontrada">
+            <a class="nome-produto" href="">Notebook Acer</a>
+            <p class="preco">R$ 3029,10</p>
+        </div>
 
-            <div class="produto">
-                <img class="img-produto" src="../images/o_principe.jpg" alt="Imagem Não Encontrada">
-                <a class="nome-produto" href="">Livro: O Príncipe</a>
-                <p class="preco">R$ 59,90</p>
-            </div>
+        <div class="produto">
+            <img class="img-produto" src="../images/o_principe.jpg" alt="Imagem Não Encontrada">
+            <a class="nome-produto" href="">Livro: O Príncipe</a>
+            <p class="preco">R$ 59,90</p>
+        </div>
 
-            <div class="produto">
-                <img class="img-produto" src="../images/o_mito_da_caverna.jpg" alt="Imagem Não Encontrada">
-                <a class="nome-produto" href="">Livro: O Mito Da Caverna</a>
-                <p class="preco">R$ 48,56</p>
-            </div>
+        <div class="produto">
+            <img class="img-produto" src="../images/o_mito_da_caverna.jpg" alt="Imagem Não Encontrada">
+            <a class="nome-produto" href="">Livro: O Mito Da Caverna</a>
+            <p class="preco">R$ 48,56</p>
+        </div>
 
-            <div class="produto">
-                <img class="img-produto" src="../images/fone_philips.jpg" alt="Imagem Não Encontrada">
-                <a class="nome-produto" href="">Fone de Ouvido Philips</a>
-                <p class="preco">R$ 140,99</p>
-            </div>
+        <div class="produto">
+            <img class="img-produto" src="../images/fone_philips.jpg" alt="Imagem Não Encontrada">
+            <a class="nome-produto" href="">Fone de Ouvido Philips</a>
+            <p class="preco">R$ 140,99</p>
+        </div>
 
-            <div class="produto">
-                <img class="img-produto" src="../images/livro_arq_computadores.jpg" alt="Imagem Não Encontrada">
-                <a class="nome-produto" href="">Livro: Arq. Computadores</a>
-                <p class="preco">R$ 119,00</p>
-            </div>
+        <div class="produto">
+            <img class="img-produto" src="../images/livro_arq_computadores.jpg" alt="Imagem Não Encontrada">
+            <a class="nome-produto" href="">Livro: Arq. Computadores</a>
+            <p class="preco">R$ 119,00</p>
+        </div>
 
-            <div class="produto">
-                <img class="img-produto" src="../images/mochila.jpg" alt="Imagem Não Encontrada">
-                <a class="nome-produto" href="">Mochila</a>
-                <p class="preco">R$ 252,99</p>
-            </div>
+        <div class="produto">
+            <img class="img-produto" src="../images/mochila.jpg" alt="Imagem Não Encontrada">
+            <a class="nome-produto" href="">Mochila</a>
+            <p class="preco">R$ 252,99</p>
+        </div>
     </div>
 </body>
 
