--- a/pages/mapa.html
+++ b/pages/mapa.html
@@ -8,33 +8,40 @@
   <link rel="stylesheet" href="../css/headertest.css" />
   <title>Document</title>
 </head>
+
 <body>
   <header>
     <div id="containerHeader">
-
       <a href="../index.html">
         <img src="https://cdn.iconscout.com/icon/free/png-256/free-imagem-quadrado-3604303-3004161.png?f=webp" alt=""
-          class="logoImages" srcset="" />
+          class="logoImages" />
       </a>
+
+      <div id="menu-toggle" aria-label="Menu" aria-expanded="false" role="button" tabindex="0">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
 
       <div id="navContent">
         <a href="">PRODUTOS</a>
         <a href="">PROMOÇÃO</a>
         <a href="./mapa.html">ENDEREÇO</a>
         <a href="./sobre.html">SOBRE</a>
-        <input id="searchBar" type="text" placeholder="Pesquisar..." />
       </div>
+
+      <input id="searchBar" type="text" placeholder="Pesquisar..." />
 
       <div id="figures">
         <figure>
-          <img src="https://cdn-icons-png.freepik.com/256/6644/6644782.png?semt=ais_incoming" class="logoImages"
-            alt="" />
+          <img src="../images/carrinhoIMG.png" class="logoImages" />
         </figure>
-        <!-- Shift + Alt + F -->
         <figure>
-          <img
-            src="https://images.vexels.com/media/users/3/137047/isolated/lists/5831a17a290077c646a48c4db78a81bb-user-profile-blue-icon.png"
-            class="logoImages" alt="" />
+          <a href="./cadastro.html">
+            <img
+              src="../images/profileIMG.png"
+              class="logoImages" />
+          </a>
         </figure>
       </div>
     </div>
@@ -43,7 +50,7 @@
   <div class="container">
 
     <br>
-    
+
     <div class="circle">
       <h1><b>MAPA</b></h1>
       <br>
