--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -1,40 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+  <title>Sobre - CampuStore</title>
   <link rel="stylesheet" href="../css/sobre.css" />
   <link rel="stylesheet" href="../css/headertest.css">
 </head>
 <body>
   <header>
     <div id="containerHeader">
-
       <a href="../index.html">
         <img src="https://cdn.iconscout.com/icon/free/png-256/free-imagem-quadrado-3604303-3004161.png?f=webp" alt=""
-          class="logoImages" srcset="" />
+          class="logoImages" />
       </a>
+
+      <div id="menu-toggle" aria-label="Menu" aria-expanded="false" role="button" tabindex="0">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
 
       <div id="navContent">
         <a href="">PRODUTOS</a>
         <a href="">PROMOÇÃO</a>
         <a href="./mapa.html">ENDEREÇO</a>
         <a href="./sobre.html">SOBRE</a>
-        <input id="searchBar" type="text" placeholder="Pesquisar..." />
       </div>
+
+      <input id="searchBar" type="text" placeholder="Pesquisar..." />
 
       <div id="figures">
         <figure>
-          <img src="https://cdn-icons-png.freepik.com/256/6644/6644782.png?semt=ais_incoming" class="logoImages"
-            alt="" />
+          <img src="../images/carrinhoIMG.png" class="logoImages" />
         </figure>
-        <!-- Shift + Alt + F -->
         <figure>
-          <img
-            src="https://images.vexels.com/media/users/3/137047/isolated/lists/5831a17a290077c646a48c4db78a81bb-user-profile-blue-icon.png"
-            class="logoImages" alt="" />
+          <a href="./cadastro.html">
+            <img
+              src="../images/profileIMG.png"
+              class="logoImages" />
+          </a>
         </figure>
       </div>
     </div>
@@ -62,25 +68,38 @@
     <div class="Membros">
       <h2>Membros do Grupo:</h2>
       <div class="membros-grid">
-        <div class="membro">
-          Ian Lucca
-          <p>Função: Tech Lead</p>
+        <div class="membro">Ian Lucca<p>Função: Tech Lead</p>
         </div>
-        <div class="membro">
-          Hugo Luiz
-          <p>Função: Dev Front-End</p>
+        <div class="membro">Hugo Luiz<p>Função: Dev Front-End</p>
         </div>
-        <div class="membro">
-          Davi Santos
-          <p>Função: Dev Front-End</p>
+        <div class="membro">Davi Santos<p>Função: Dev Front-End</p>
         </div>
-        <div class="membro">
-          Thales Grossi
-          <p>Função: Dev Front-End</p>
+        <div class="membro">Thales Grossi<p>Função: Dev Front-End</p>
         </div>
       </div>
     </div>
   </div>
 </body>
+<script>
+  const menuToggle = document.getElementById('menu-toggle');
+  const navContent = document.getElementById('navContent');
+
+  menuToggle.addEventListener('click', () => {
+    navContent.classList.toggle('active');
+    menuToggle.classList.toggle('active');
+    // Accessibility attribute
+    const expanded = menuToggle.getAttribute('aria-expanded') === 'true';
+    menuToggle.setAttribute('aria-expanded', String(!expanded));
+  });
+
+  // Optional: Allow keyboard toggle (enter / space)
+  menuToggle.addEventListener('keydown', (e) => {
+    if (e.key === 'Enter' || e.key === ' ') {
+      e.preventDefault();
+      menuToggle.click();
+    }
+  });
+</script>
+
 
 </html>
