Ataualizacao de links e promo

--- a/pages/produto.html
+++ b/pages/produto.html
@@ -21,8 +21,8 @@
         </a>
 
         <div id="navContent">
-          <a href="">PRODUTOS</a>
-          <a href="">PROMOÇÃO</a>
+          <a href="./gradeProdutos.html">PRODUTOS</a>
+          <a href="./promocoes.html">PROMOÇÃO</a>
           <a href="./mapa.html">ENDEREÇO</a>
           <a href="./sobre.html">SOBRE</a>
           <input id="searchBar" type="text" placeholder="Pesquisar..." />
