--- a/pages/mapa.html
+++ b/pages/mapa.html
@@ -24,8 +24,8 @@
       </div>
 
       <div id="navContent">
-        <a href="">PRODUTOS</a>
-        <a href="">PROMOÇÃO</a>
+        <a href="./gradeProdutos.html">PRODUTOS</a>
+        <a href="./promocoes.html">PROMOÇÃO</a>
         <a href="./mapa.html">ENDEREÇO</a>
         <a href="./sobre.html">SOBRE</a>
       </div>
